UI work search view button homepage

--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -39,7 +39,7 @@
     <ImageView
         android:id="@+id/pharmapic"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/toolbars"
         android:src="@drawable/_601031" />
     <TextView
