--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="100sp"
+    tools:context=".homepage"
+    android:id="@+id/homepage">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:scrollbarThumbHorizontal="@color/transparent"
-        android:scrollbarThumbVertical="@color/transparent"
-        tools:context=".homepage"
-        android:id="@+id/homepage"
-        >
+
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -22,6 +20,7 @@
             android:id="@+id/HomeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
 <!--            android:visibility="gone"-->
 
             <!--<androidx.appcompat.widget.SearchView
@@ -41,72 +40,32 @@
                 app:queryBackground="@android:color/transparent"
                 app:queryHint="Search your Medicine"/>-->
 
+            <com.denzcoskun.imageslider.ImageSlider
+                android:id="@+id/coursel"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:elevation="10dp"
+                app:iss_auto_cycle="true"
+                app:iss_corner_radius="15"
+                app:iss_delay="8"
+                app:iss_indicator_align="10"
+                app:iss_period="1050"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:src="@drawable/shape3"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/Hi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="12dp"
-                android:text="Hi,"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/home_user_phn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="@string/username"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/Hi" />
-
-            <ImageButton
-                android:id="@+id/cartimagebutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/cart"
-                android:elevation="5dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/outline_shopping_cart_24" />
-
-            <TextView
-                android:id="@+id/cart_badge_text_view"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:elevation="6sp"
-                android:ellipsize="middle"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/cartimagebutton"
-                app:layout_constraintTop_toTopOf="@+id/cartimagebutton" />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:contentDescription="@string/app_name"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/account_circle" />
 
 
             <androidx.cardview.widget.CardView
@@ -165,7 +124,6 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/textView2"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentBottom="true"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="10dp"
                         android:layout_toStartOf="@+id/homeupload"
@@ -187,23 +145,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view" />-->
 
-
-            <com.denzcoskun.imageslider.ImageSlider
-                android:id="@+id/coursel"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="10dp"
-                android:elevation="10dp"
-                app:iss_auto_cycle="true"
-                app:iss_corner_radius="15"
-                app:iss_delay="8"
-                app:iss_indicator_align="10"
-                app:iss_period="1050"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/categories"
@@ -268,7 +209,7 @@
 
                 android:id="@+id/products"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
@@ -277,6 +218,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/categories">
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -382,9 +324,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
     </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
-</ScrollView>
 
 
 
