--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -35,15 +35,16 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                app:srcCompat="@drawable/user" />
+<!--            <ImageView-->
+<!--                android:id="@+id/imageView3"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="150dp"-->
+<!--                app:srcCompat="@drawable/user" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:baselineAligned="false"
@@ -68,7 +69,7 @@
                         android:hint="First Name"
                         android:inputType="text"
                         android:singleLine="true"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -89,7 +90,7 @@
                         android:hint="Last Name"
                         android:inputType="text"
                         android:singleLine="true"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
@@ -115,7 +116,7 @@
                     android:ems="10"
                     android:inputType="date"
                     android:singleLine="false"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -138,7 +139,7 @@
                     android:hint="Email id"
                     android:inputType="textEmailAddress"
                     android:singleLine="false"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -161,23 +162,25 @@
                     android:hint="Phone Number"
                     android:inputType="number"
                     android:singleLine="false"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:text="Gender"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 android:textColor="@color/grayish"
                 android:textStyle="bold" />
 
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16sp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:orientation="horizontal">
 
                 <RadioButton
@@ -187,7 +190,7 @@
                     android:layout_weight="1"
                     android:text="Male"
                     android:textColor="@color/grayish"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <RadioButton
                     android:id="@+id/Female"
@@ -196,7 +199,7 @@
                     android:layout_weight="1"
                     android:text="Female"
                     android:textColor="@color/grayish"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <RadioButton
                     android:id="@+id/other"
@@ -205,21 +208,25 @@
                     android:layout_weight="1"
                     android:text="Other"
                     android:textColor="@color/grayish"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
             </RadioGroup>
 
-            <Button
-                android:id="@+id/saveUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/teal_200"
-                android:foregroundTint="@color/white"
-                android:text="SAVE" />
+
 
         </LinearLayout>
 
+
     </androidx.core.widget.NestedScrollView>
+    <Button
+        android:id="@+id/saveUser"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:backgroundTint="@color/teal_A700"
+        android:foregroundTint="@color/white"
+        android:text="SAVE" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
