--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -125,6 +125,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:focusable="true"
+                app:helperText="Required"
                 android:focusableInTouchMode="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -137,6 +138,7 @@
                     android:ems="10"
                     android:hint="Email id"
                     android:inputType="textEmailAddress"
+                    app:errorEnabled="true"
                     android:singleLine="false"
                     android:textSize="20sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -158,6 +160,7 @@
                     android:layout_centerVertical="true"
                     android:autofillHints=""
                     android:ems="10"
+                    android:maxLength="10"
                     android:hint="Phone Number"
                     android:inputType="number"
                     android:singleLine="false"
