--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -142,21 +142,26 @@
                     android:autofillHints=""
                     android:ems="10"
                     android:hint="Email id"
-                    android:inputType="textEmailAddress"
-                    app:errorEnabled="true"
+                    android:inputType="textEmailAddress|textEmailSubject"
                     android:singleLine="false"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    app:errorEnabled="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="15sp"
+                android:layout_weight="1"
+                android:hint="Phone Number"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200"
+                app:prefixText="+91"
+                app:prefixTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
+                tools:layout_marginEnd="16dp">
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/phn_number"
@@ -166,9 +171,8 @@
                     android:layout_centerVertical="true"
                     android:autofillHints=""
                     android:ems="10"
-                    android:maxLength="10"
-                    android:hint="Phone Number"
                     android:inputType="number"
+                    android:maxLength="10"
                     android:singleLine="false"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
