--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:gravity="center"
+
+    >
 <!--    <RelativeLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
@@ -38,10 +40,11 @@
 
     <ImageView
         android:id="@+id/pharmapic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300sp"
+        android:layout_height="300sp"
         android:layout_below="@+id/toolbars"
-        android:src="@drawable/_601031" />
+        android:src="@drawable/_601031"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
