--- a/app/src/main/res/layout/mycart_card.xml
+++ b/app/src/main/res/layout/mycart_card.xml
@@ -22,8 +22,8 @@
         app:strokeColor="@color/material_on_surface_stroke"
         app:strokeWidth="1dp">
 
-       <!-- <com.google.android.material.button.MaterialButton
-            android:id="@+id/deletebtn"
+       <com.google.android.material.button.MaterialButton
+            android:id="@+id/mycart_deletebtn"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="top|end"
@@ -31,7 +31,7 @@
             android:rotation="270"
             app:backgroundTint="@color/red_500"
             tools:layout_gravity="right" />
--->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
 
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/minusbtn"
+                        android:id="@+id/mycart_minusbtn"
                         style="@android:style/Widget.Material.ImageButton"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
@@ -116,7 +116,7 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/addbtn"
+                        android:id="@+id/mycart_addbtn"
                         style="@android:style/Widget.Material.ImageButton"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
